# esp-net

./: CMakeLists.txt  PROTOCOL.md  README.md  sdkconfig.defaults
docs/: PROTOCOL.md
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  singleton.hpp
main/assets/: test_16k.pcm
main/modules/audio/: vad.cpp  vad.hpp
main/modules/driver/: stm_bridge.cpp  stm_bridge.hpp
main/modules/network/: http_requester.cpp  http_requester.hpp  wifi_station.cpp  wifi_station.hpp
